finish GreenCityRemoteClientTest